@@ -822,9 +822,9 @@ experimenting.
 \topicindex {math+italics}
 
 The \lpr {mathitalicsmode} parameter can be set to~1 to force italic correction
-before noads that represent some more complex structure (read: everything
-that is not an ord, bin, rel, open, close, punct or inner). We show a Cambria
-example.
+before noads that represent some more complex structure (read: everything that is
+not an ord, bin, rel, open, close, punct or inner). A value of~2 will enforce the
+old school font code path for all italics. We show a Cambria example.
 
 \starttexdefinition Whatever #1
     \NC \type{\mathitalicsmode = #1}
